--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - AWS
   script:
     - cd app
+    - cd demoday-testing-proj
     - dotnet restore
     - dotnet build --configuration Release
   artifacts:
