--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ test:
   script:
     - cd app
     - cd demoday-testing-proj
-    - dotnet test --configuration Release --no-build --verbosity normal
+    - dotnet test 
   dependencies:
     - build
 
