update-path-deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ deploy:
     - cd app
     - cd demoday-testing-proj
     # Build e push da imagem Docker
-    - docker build -t bieco013/desafio-docker-aws-gitlab:$VERSION app/.
+    - docker build -t bieco013/desafio-docker-aws-gitlab:$VERSION demoday-testing-proj/.
     - docker push bieco013/desafio-docker-aws-gitlab:$VERSION
     # Deploy do container
     - docker pull bieco013/desafio-docker-aws-gitlab:$VERSION
