--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ deploy:
   script:
     - cd app
     # Build e push da imagem Docker
-    - docker build -t bieco013/desafio-docker-aws-gitlab:$VERSION app/.
+    - docker build -t bieco013/desafio-docker-aws-gitlab:$VERSION 
     - docker push bieco013/desafio-docker-aws-gitlab:$VERSION
     # Deploy do container
     - docker pull bieco013/desafio-docker-aws-gitlab:$VERSION
